; ModuleID = '/home/carl/AnghaBench/linux/net/can/extr_raw.c_raw_getname.c'
source_filename = "/home/carl/AnghaBench/linux/net/can/extr_raw.c_raw_getname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { %struct.sock* }
%struct.sock = type { i32 }
%struct.sockaddr = type { i32 }
%struct.sockaddr_can = type { i32, i32 }
%struct.raw_sock = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@AF_CAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.sockaddr*, i32)* @raw_getname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @raw_getname(%struct.socket* %0, %struct.sockaddr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sockaddr_can*, align 8
  %9 = alloca %struct.sock*, align 8
  %10 = alloca %struct.raw_sock*, align 8
  store %struct.socket* %0, %struct.socket** %5, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %12 = bitcast %struct.sockaddr* %11 to %struct.sockaddr_can*
  store %struct.sockaddr_can* %12, %struct.sockaddr_can** %8, align 8
  %13 = load %struct.socket*, %struct.socket** %5, align 8
  %14 = getelementptr inbounds %struct.socket, %struct.socket* %13, i32 0, i32 0
  %15 = load %struct.sock*, %struct.sock** %14, align 8
  store %struct.sock* %15, %struct.sock** %9, align 8
  %16 = load %struct.sock*, %struct.sock** %9, align 8
  %17 = call %struct.raw_sock* @raw_sk(%struct.sock* %16)
  store %struct.raw_sock* %17, %struct.raw_sock** %10, align 8
  %18 = load i32, i32* %7, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %3
  %21 = load i32, i32* @EOPNOTSUPP, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %34

23:                                               ; preds = %3
  %24 = load %struct.sockaddr_can*, %struct.sockaddr_can** %8, align 8
  %25 = call i32 @memset(%struct.sockaddr_can* %24, i32 0, i32 8)
  %26 = load i32, i32* @AF_CAN, align 4
  %27 = load %struct.sockaddr_can*, %struct.sockaddr_can** %8, align 8
  %28 = getelementptr inbounds %struct.sockaddr_can, %struct.sockaddr_can* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  %29 = load %struct.raw_sock*, %struct.raw_sock** %10, align 8
  %30 = getelementptr inbounds %struct.raw_sock, %struct.raw_sock* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.sockaddr_can*, %struct.sockaddr_can** %8, align 8
  %33 = getelementptr inbounds %struct.sockaddr_can, %struct.sockaddr_can* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  store i32 8, i32* %4, align 4
  br label %34

34:                                               ; preds = %23, %20
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local %struct.raw_sock* @raw_sk(%struct.sock*) #1

declare dso_local i32 @memset(%struct.sockaddr_can*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
